@@ -597,15 +597,12 @@ static int	zbx_snmp_set_result(const struct variable_list *var, unsigned char va
 	else if (ASN_INTEGER == var->type)
 #endif
 	{
-		if (ITEM_VALUE_TYPE_UINT64 == value_type && 0 > *var->val.integer)
-		{
-			SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Received value [%d]"
-					" is not suitable for value type [%s].",
-					*var->val.integer, zbx_item_value_type_string(value_type)));
+		char	buffer[12];
+
+		zbx_snprintf(buffer, sizeof(buffer), "%d", *var->val.integer);
+
+		if (SUCCEED != set_result_type(result, value_type, data_type, buffer))
 			ret = NOTSUPPORTED;
-		}
-		else
-			SET_DBL_RESULT(result, *var->val.integer);
 	}
 #ifdef OPAQUE_SPECIAL_TYPES
 	else if (ASN_FLOAT == var->type)
